--- a/helm/prod/top/idpay-ranker/values.yaml
+++ b/helm/prod/top/idpay-ranker/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "600m"
 
   autoscaling:
-    enable: true
+    enable: false
     minReplica: 1
     maxReplica: 1
     pollingInterval: 30 # seconds
