added new app name in pipelines

--- a/.devops/templates/deploy-argo-template.yml
+++ b/.devops/templates/deploy-argo-template.yml
@@ -219,6 +219,6 @@ jobs:
       ARGOCD_SERVER: ${{ parameters.argocdServerUrl }}
       ARGOCD_USERNAME: ${{ parameters.argocdUserName }}
       ARGOCD_PASSWORD: ${{ parameters.argocdUserPassword }}
-      ARGOCD_APP_NAME: "$(applicationPrefix)/$(appName)"
+      ARGOCD_APP_NAME: "${{ parameters.applicationPrefix }}/$(appName)"
       TARGET_BRANCH: ${{ parameters.targetBranch }}
     continueOnError: true
