Removed release-dev and release-uat

--- a/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
+++ b/helm/dev/mid/idpay-portal-welfare-backend-role-permission/values.yaml
@@ -5,7 +5,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-portal-welfare-backend-role-permission
-    tag: snapshot-release-dev
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
