--- a/helm/uat/mid/idpay-group/values.yaml
+++ b/helm/uat/mid/idpay-group/values.yaml
@@ -5,7 +5,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-group
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
