--- a/helm/dev/ext/idpay-notification-manager/values.yaml
+++ b/helm/dev/ext/idpay-notification-manager/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-notification-manager
-    tag: snapshot-release-dev
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
