--- a/helm/dev/mid/idpay-timeline/values.yaml
+++ b/helm/dev/mid/idpay-timeline/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-timeline
-    tag: snapshot-release-dev
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
