--- a/helm/dev/top/idpay-kafka-connect/values.yaml
+++ b/helm/dev/top/idpay-kafka-connect/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-kafka-connect
-    tag: snapshot-release-dev
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
