--- a/helm/uat/ext/idpay-notification-manager/values.yaml
+++ b/helm/uat/ext/idpay-notification-manager/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-notification-manager
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
