--- a/helm/uat/mid/idpay-recovery-error-topic/values.yaml
+++ b/helm/uat/mid/idpay-recovery-error-topic/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-recovery-error-topic
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   resources:
