--- a/helm/uat/mid/idpay-timeline/values.yaml
+++ b/helm/uat/mid/idpay-timeline/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-timeline
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
