--- a/helm/uat/top/idpay-kafka-connect/values.yaml
+++ b/helm/uat/top/idpay-kafka-connect/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-kafka-connect
-    tag: snapshot-release-uat
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
