--- a/helm/dev/top/idpay-wallet/values.yaml
+++ b/helm/dev/top/idpay-wallet/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-wallet
-    tag: snapshot-dev
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
