--- a/helm/_global/idpay-wallet.yaml
+++ b/helm/_global/idpay-wallet.yaml
@@ -68,6 +68,7 @@ microservice-chart:
       TZ: TZ
     rest-client:
       PAYMENT_INSTRUMENT_URI: idpay_payment_instrument_host
+      PAYMENT_URI: idpay_payment_host
       ONBOARDING_URI: idpay_onboarding_host
       IDPAY_INITIATIVE_BASE_URL: initiative_ms_base_url
     idpay-eventhub-00:
