--- a/helm/uat/top/mcshared-datavault/values.yaml
+++ b/helm/uat/top/mcshared-datavault/values.yaml
@@ -5,7 +5,7 @@ microservice-chart:
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.dev.cstar.pagopa.it
+    host: idpay.itn.internal.uat.cstar.pagopa.it
 
   resources:
     requests:
@@ -30,7 +30,7 @@ microservice-chart:
   envConfig:
 
   envSecret:
-
+  
   keyvault:
-    name: "cstar-d-itn-idpay-kv"
+    name: "cstar-u-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
