--- a/helm/dev/top/idpay-asset-register-backend/values.yaml
+++ b/helm/dev/top/idpay-asset-register-backend/values.yaml
@@ -54,8 +54,9 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
 
   postman-test:
-    run: true
+    run: "true"
     repoName: idpay-asset-register-back
     dir: postman/collection
     collectionName: AssetRegister.postman_collection-file
+
 
