--- a/helm/dev/top/idpay-asset-register-backend/values.yaml
+++ b/helm/dev/top/idpay-asset-register-backend/values.yaml
@@ -57,6 +57,6 @@ postman-test:
   run: "true"
   repoName: idpay-asset-register-backend
   dir: postman/collection
-  collectionName: AssetRegister.postman_collection
+  collectionName: AssetRegister.postman_collection.json
 
 
