--- a/helm/_global/idpay-merchant.yaml
+++ b/helm/_global/idpay-merchant.yaml
@@ -63,6 +63,7 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "60"
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
+    KEYCLOAK_ADMIN_USER_ACTIONS_EMAIL_LIFESPAN: 604800
 
   externalConfigMapValues:
     idpay-common:
