--- a/helm/_global/mcshared-datavault.yaml
+++ b/helm/_global/mcshared-datavault.yaml
@@ -49,15 +49,12 @@ microservice-chart:
 
   envConfig:
     json-logs: "false"
-    quarkus-log-level: "ERROR"
-    app-log-level: "ERROR"
+    quarkus-log-level: "WARN"
+    app-log-level: "WARN"
     mongodb-connect-timeout: "5"
     mongodb-read-timeout: "10"
     mongodb-server-selection-timeout: "5"
     mongodb-database: "idpay"
-    back-off-initial-duration: "1"
-    back-off-jitter: "0.2"
-    back-off-number-of-attempts: "3"
 
   externalConfigMapValues:
 
