UPBE-249 mod admissibility replica for test

--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -16,7 +16,7 @@ microservice-chart:
       cpu: "750m"
 
   autoscaling:
-    enable: true
+    enable: false
     minReplica: 1
     maxReplica: 2
     pollingInterval: 30 # seconds
