fix: Upbe 249 adeguamento admissibility per controllo su fine iniziativa post scodatore (#83)
Co-authored-by: del Gaudio, Alessandro <alessndro.delgaudio@nttdata.com>

--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -16,9 +16,9 @@ microservice-chart:
       cpu: "750m"
 
   autoscaling:
-    enable: true
-    minReplica: 0
-    maxReplica: 0
+    enable: false
+    minReplica: 1
+    maxReplica: 2
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
