Test new config for AzureBlobStorageClient

--- a/helm/_global/idpay-transactions.yaml
+++ b/helm/_global/idpay-transactions.yaml
@@ -61,6 +61,8 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "45"
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
+    BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
+    INVOICE_STORAGE_SAS_DURATION_SECONDS: "60"
 
   externalConfigMapValues:
     idpay-common:
@@ -87,6 +89,7 @@ microservice-chart:
     KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
     KAFKA_COMMANDS_SASL_JAAS_CONFIG: evh-idpay-commands-idpay-commands-consumer-jaas-config-idpay-01
     PDV_DECRYPT_API_KEY: pdv-api-key
+    BLOB_STORAGE_ACCOUNT_NAME: refund-storage-account-name
 
   externalConfigMapFiles:
     create: true
