[UPBE-240] updated ranker dev config to refer branch tag

--- a/helm/dev/top/idpay-ranker/values.yaml
+++ b/helm/dev/top/idpay-ranker/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranker
-    tag: snapshot-develop
+    tag: snapshot-UPBE-240-expiration-trx-event-processing
     pullPolicy: Always
 
   ingress:
