--- a/helm/prod/top/fake-mcshared-datavault/values.yaml
+++ b/helm/prod/top/fake-mcshared-datavault/values.yaml
@@ -1,25 +1,25 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/mcshared-datavault
-    tag: 2.0.1@sha256:571ac9b07672d8400b110499a7284e16bcb3604fde5fd8aec9c00634de77d29d
+    tag: 2.1.0@sha256:243c530b65fccccab9b4bd353002150b181e98dda0960f43bfdc439c47865a67
     pullPolicy: Always
 
   ingress:
-    host: idpay.itn.internal.dev.cstar.pagopa.it
+    host: idpay.itn.internal.cstar.pagopa.it
 
   resources:
     requests:
       memory: "128Mi"
-      cpu: "100m"
+      cpu: "200m"
     limits:
       memory: "256Mi"
-      cpu: "100m"
+      cpu: "700m"
 
   autoscaling:
     enable: true
     minReplica: 1
-    maxReplica: 2
-    pollingInterval: 10 # seconds
+    maxReplica: 10
+    pollingInterval: 20 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
       - type: cpu
@@ -30,7 +30,7 @@ microservice-chart:
   envConfig:
 
   envSecret:
-
+  
   keyvault:
-    name: "cstar-d-itn-idpay-kv"
+    name: "cstar-p-itn-idpay-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
