--- a/helm/dev/top/idpay-ranker/values.yaml
+++ b/helm/dev/top/idpay-ranker/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranker
-    tag: snapshot-UPBE-240-expiration-trx-event-processing
+    tag: snapshot-develop
     pullPolicy: Always
 
   ingress:
