--- a/helm/_global/idpay-ranker.yaml
+++ b/helm/_global/idpay-ranker.yaml
@@ -62,16 +62,27 @@ microservice-chart:
     DELETE_PAGINATION_SIZE: "100"
     DELETE_DELAY_TIME: "1000"
     HEALTH_MONGO_ENABLED: "false"
+    KAFKA_TRANSACTION_GROUP_ID: "idpay_transaction_ranker_consumer_group"
 
   externalConfigMapValues:
     idpay-common:
       TZ: TZ
-
+    idpay-eventhub-01:
+      KAFKA_BINDER_BROKER_ENDPOINT_REWARD_TRX: kafka_broker
+      KAFKA_TRANSACTIONS_SECURITY_PROTOCOL: kafka_security_protocol
+      KAFKA_ERRORS_BROKER: kafka_broker
+      KAFKA_ERRORS_TOPIC: idpay_error_topic
+    idpay-eventhub-00:
+      KAFKA_TRANSACTIONS_BROKER: kafka_broker
+      KAFKA_TRANSACTIONS_SASL_MECHANISM_00: kafka_sasl_mechanism
+      KAFKA_TRANSACTION_TOPIC: idpay_transaction_topic
 
   envSecret:
     MONGODB_URI: mongodb-primary-connection-string
     SERVICEBUS_ONBOARDING_CONNECTION_STRING: idpay-onboarding-request-processor-sas-key
     SERVICEBUS_ADMISSIBILITY_CONNECTION_STRING: idpay-admissibility-request-producer-sas-key
+    EVH_CONNECTION_TRANSACTION: evh-idpay-transaction-idpay-transaction-consumer-jaas-config-idpay-00
+    KAFKA_ERRORS_SASL_JAAS_CONFIG: evh-idpay-errors-idpay-errors-producer-jaas-config-idpay-01
 
   nodeSelector: {}
 
