[UPBE-275] disable pdnd mock

--- a/helm/uat/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/uat/top/idpay-admissibility-assessor/values.yaml
@@ -56,7 +56,7 @@ microservice-chart:
     CACHE_REFRESH_MS_RATE: "10000"
     REDIS_CACHE_ENABLED: "true"
 
-    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
+#    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
     PDND_ACCESS_TOKEN_AUDIENCE: auth.uat.interop.pagopa.it/client-assertion
 
 
