--- a/helm/prod/top/idpay-asset-register-backend/values.yaml
+++ b/helm/prod/top/idpay-asset-register-backend/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-asset-register-backend
-    tag: v1.0.0
+    tag: v1.1.0@sha256:bc466dee24020e1ccca83781bfdce795877604b5094e39f216afb1d7ab5fe334
     pullPolicy: Always
 
   ingress:
@@ -9,23 +9,23 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "512Mi"
+      memory: "1000Mi"
       cpu: "200m"
     limits:
-      memory: "1Gi"
+      memory: "1500Mi"
       cpu: "600m"
 
   autoscaling:
     enable: true
-    minReplica: 1
-    maxReplica: 1
+    minReplica: 3
+    maxReplica: 12
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
       - type: cpu
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+          value: "60"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
