--- a/helm/prod/top/idpay-merchant/values.yaml
+++ b/helm/prod/top/idpay-merchant/values.yaml
@@ -10,9 +10,9 @@ microservice-chart:
   resources:
     requests:
       memory: "1Gi"
-      cpu: "150m"
+      cpu: "200m"
     limits:
-      memory: "1Gi"
+      memory: "1.5Gi"
       cpu: "600m"
 
   autoscaling:
@@ -29,7 +29,7 @@ microservice-chart:
 
   envConfig:
     KEYCLOAK_ADMIN_REDIRECT_URI: "https://bonuselettrodomestici.it/esercente"
-    MERCHANT_DEFAULT_INITIATIVES: "initiative-1,initiative-2"
+    MERCHANT_DEFAULT_INITIATIVES: "68dd003ccce8c534d1da22bc"
     JAVA_TOOL_OPTIONS: >-
       -XX:InitialRAMPercentage=75.0
       -XX:MaxRAMPercentage=85.0
