--- a/helm/prod/top/idpay-merchant/values.yaml
+++ b/helm/prod/top/idpay-merchant/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-merchant
-    tag: v2.2.0
+    tag: v2.3.0@sha256:7ec84df3cf0443df56e1c520d1d3a31d518cf908efb5802a67118039faa0a545
     pullPolicy: Always
 
   ingress:
