--- a/helm/_global/idpay-payment.yaml
+++ b/helm/_global/idpay-payment.yaml
@@ -62,9 +62,9 @@ microservice-chart:
     TIMEOUT_PAYMENT_SECONDS: "30"
     HEALTH_MONGO_ENABLED: "false"
     BLOB_STORAGE_CONTAINER_REFERENCE: "invoices"
-    staleMinutesThreshold: "120"
-    sendExpiredSendBatchSize: "1000"
-    updateBatchSize: "10000"
+    STALE_MINUTES_THRESHOLD: "120"
+    EXPIRY_SEND_BATCH_SIZE: "1000"
+    EXPIRY_UPDATE_BATCH_SIZE: "10000"
 
   externalConfigMapValues:
     idpay-common:
