--- a/helm/prod/top/idpay-transactions/values.yaml
+++ b/helm/prod/top/idpay-transactions/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-transactions
-    tag: v1.3.0
+    tag: v1.4.0@sha256:02cb539da55b56201195bb5359123a6811445f5f8fd64631e2d87e4db2c48ce5
     pullPolicy: Always
 
   ingress:
@@ -9,17 +9,17 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
-    limits:
       memory: "1Gi"
+      cpu: "200m"
+    limits:
+      memory: "1.5Gi"
       cpu: "600m"
 
   autoscaling:
     enable: true
     minReplica: 3
-    maxReplica: 5
-    pollingInterval: 30 # seconds
+    maxReplica: 6
+    pollingInterval: 20 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
       - type: cpu
