--- a/helm/prod/top/idpay-payment/values.yaml
+++ b/helm/prod/top/idpay-payment/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-payment
-    tag: v1.13.0
+    tag: v1.14.1@sha256:0bae97a217733955ea26fc49fddad3e99422abc6893e76166ed91e1855a48db2
     pullPolicy: Always
 
   ingress:
@@ -18,8 +18,8 @@ microservice-chart:
   autoscaling:
     enable: true
     minReplica: 3
-    maxReplica: 5
-    pollingInterval: 30 # seconds
+    maxReplica: 6
+    pollingInterval: 20 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
       - type: cpu
