--- a/helm/dev/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/dev/top/idpay-admissibility-assessor/values.yaml
@@ -65,12 +65,12 @@ microservice-chart:
     CACHE_REFRESH_MS_RATE: "60000"
     REDIS_CACHE_ENABLED: "true"
 
-#    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
-    PDND_ACCESS_TOKEN_AUDIENCE: auth.uat.interop.pagopa.it/client-assertion
+    PDND_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/pdnd
+#    PDND_ACCESS_TOKEN_AUDIENCE: auth.uat.interop.pagopa.it/client-assertion
 
     ANPR_ENV: dev
     ANPR_AUTH_USERID: pagopa-idpay
-#    ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
-    ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
+    ANPR_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/anpr
+#    ANPR_BASE_URL: https://modipa-val.anpr.interno.it/govway/rest/in/MinInternoPortaANPR-PDND
 
     INPS_ISEE_CONSULTATION_BASE_URL: http://idpay-mock-microservice-chart:8080/idpay/mock/inps/soap
