--- a/helm/_global/idpay-notification-email.yaml
+++ b/helm/_global/idpay-notification-email.yaml
@@ -71,7 +71,7 @@ microservice-chart:
   #          targetValue: "30"
 
   envConfig:
-    MONGODB_DBNAME: idpay
+    MONGODB_DBNAME: "idpay-beneficiari"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaynotificationemail"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
