--- a/helm/_global/idpay-admissibility-assessor.yaml
+++ b/helm/_global/idpay-admissibility-assessor.yaml
@@ -53,7 +53,7 @@ microservice-chart:
     APP: "idpay-admissibility-assessor"
     KAFKA_BENEFICIARY_RULE_REQUEST_GROUP_ID: "idpay-beneficiary-rule-update-consumer-group"
     KAFKA_COMMANDS_GROUP_ID: "idpay-commands-admissibility-consumer-group"
-    MONGODB_DBNAME: "idpay"
+    MONGODB_DBNAME: "idpay-beneficiari"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayadmissibilityassessor"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
