--- a/helm/_global/idpay-merchant.yaml
+++ b/helm/_global/idpay-merchant.yaml
@@ -51,7 +51,7 @@ microservice-chart:
     runAsGroup: 10000
 
   envConfig:
-    MONGODB_DBNAME: idpay
+    MONGODB_DBNAME: "idpay-pagamenti"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpaymerchant"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "INFO"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
