--- a/helm/_global/idpay-reward-user-id-splitter.yaml
+++ b/helm/_global/idpay-reward-user-id-splitter.yaml
@@ -53,7 +53,7 @@ microservice-chart:
     APP: "idpay-reward-user-id-splitter"
     KAFKA_RTD_GROUP_ID: "idpay-consumer-group"
     CACHE_REFRESH_MS_RATE: "31536000000"
-    MONGODB_DBNAME: "idpay"
+    MONGODB_DBNAME: "idpay-beneficiari"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayrewarduseridsplitter"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
