feat: LTBE-86 modified mongodb_name in yaml project (#104)
* LTBE-86 modified mongodb_name in yaml project

* add secondary dbname in reward calculator

* change tag on reward

* change tag on reward

---------

Co-authored-by: del Gaudio, Alessandro <alessndro.delgaudio@nttdata.com>
Co-authored-by: and-mora <andrea.morabito@pagopa.it>

--- a/helm/_global/idpay-reward-calculator.yaml
+++ b/helm/_global/idpay-reward-calculator.yaml
@@ -50,7 +50,8 @@ microservice-chart:
     runAsGroup: 10000
 
   envConfig:
-    MONGODB_DBNAME: "idpay"
+    MONGODB_DBNAME: "idpay-pagamenti"
+    MONGODB_SECONDARY_DBNAME: "idpay-beneficiari"
     APPLICATIONINSIGHTS_ROLE_NAME: "idpayrewardcalculator"
     APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
     APPLICATIONINSIGHTS_INSTRUMENTATION_MICROMETER_ENABLED: "false"
