--- a/helm/dev/ext/idpay-mock/values.yaml
+++ b/helm/dev/ext/idpay-mock/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-mock
-    tag:  snapshot-275-adeguamento-family-birth-date
+    tag:  snapshot-develop
     pullPolicy: Always
 
   ingress:
