chore: update image tags in values.yaml for reward calculator

--- a/helm/uat/top/idpay-reward-calculator/values.yaml
+++ b/helm/uat/top/idpay-reward-calculator/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-reward-calculator
-    tag: snapshot-add-secondary-connection-string
+    tag: snapshot-uat
     pullPolicy: Always
 
   ingress:
