--- a/helm/prod/top/idpay-reward-calculator/values.yaml
+++ b/helm/prod/top/idpay-reward-calculator/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-reward-calculator
-    tag: v2.1.3
+    tag: v2.3.0@sha256:5038c25b0b554bfb632e22fec9562bc37d88de74934346c5df388429aaf57b81
     pullPolicy: Always
 
   ingress:
