--- a/helm/prod/top/idpay-ranker/values.yaml
+++ b/helm/prod/top/idpay-ranker/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranker
-    tag: v1.0.0
+    tag: v1.0.0@sha256:4879e44f0b2cdbdde310f6f5c65645c17ae433d7e3d0e01311358dc2910d4f80
     pullPolicy: Always
 
   ingress:
