--- a/helm/prod/top/idpay-onboarding-workflow/values.yaml
+++ b/helm/prod/top/idpay-onboarding-workflow/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-onboarding-workflow
-    tag: v1.4.2
+    tag: v1.6.0@sha256:6cf36b3116d8412987a349df5bc276bb0892d9d8b1037ab1531657db4587e051
     pullPolicy: Always
 
   ingress:
