--- a/helm/prod/mid/idpay-payment-instrument/values.yaml
+++ b/helm/prod/mid/idpay-payment-instrument/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-payment-instrument
-    tag: v1.4.5
+    tag: v1.4.6@sha256:bb6db92f6bfddb00126e9e4e2c30d0b9740fd19e6f0adfb2953e91ce03829a8c
     pullPolicy: Always
 
   ingress:
