--- a/helm/prod/mid/idpay-ranking/values.yaml
+++ b/helm/prod/mid/idpay-ranking/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranking
-    tag: v1.2.2
+    tag: v1.2.3@sha256:c8215c88a9c8ad9a3922695c68d17bcd767b9bf035ffcdc7043ba08a100366f3
     pullPolicy: Always
 
   ingress:
