--- a/helm/prod/ext/idpay-notification-email/values.yaml
+++ b/helm/prod/ext/idpay-notification-email/values.yaml
@@ -2,7 +2,7 @@ microservice-chart:
 
   image:
     repository: ghcr.io/pagopa/idpay-notification-email
-    tag: v1.1.0
+    tag: v1.3.0@sha256:6fc89925efd1f2b8e06db3581440b0bfedfe3d47b1d330025657b8248aa5352b
     pullPolicy: Always
 
   ingress:
