--- a/helm/prod/ext/idpay-notification-manager/values.yaml
+++ b/helm/prod/ext/idpay-notification-manager/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-notification-manager
-    tag: v1.4.2
+    tag: v1.6.0@sha256:a9f16c0fa8b9302db0252c07058b91287ed34d7b0cd18ce3237d670b6f3527f3
     pullPolicy: Always
 
   ingress:
