--- a/helm/prod/top/idpay-admissibility-assessor/values.yaml
+++ b/helm/prod/top/idpay-admissibility-assessor/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-admissibility-assessor
-    tag: v1.4.1
+    tag: v1.5.0@sha256:a3110888de17bcaa83996fd8fc290ca26994e8b32fc551c5df93f64cb101a5b7
     pullPolicy: Always
 
   ingress:
@@ -9,16 +9,16 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "256Mi"
-      cpu: "300m"
+      memory: "1Gi"
+      cpu: "400m"
     limits:
-      memory: "4Gi"
-      cpu: "500m"
+      memory: "3Gi"
+      cpu: "800m"
 
   autoscaling:
     enable: true
     minReplica: 3
-    maxReplica: 5
+    maxReplica: 6
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
