--- a/helm/uat/mid/idpay-timeline/values.yaml
+++ b/helm/uat/mid/idpay-timeline/values.yaml
@@ -9,23 +9,23 @@ microservice-chart:
 
   resources:
     requests:
-      memory: "768Mi"
-      cpu: "150m"
+      memory: "1Gi"
+      cpu: "400m"
     limits:
-      memory: "768Mi"
-      cpu: "600m"
+      memory: "1.5Gi"
+      cpu: "800m"
 
   autoscaling:
     enable: true
-    minReplica: 1
-    maxReplica: 2
+    minReplica: 3
+    maxReplica: 6
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
     triggers:
       - type: cpu
         metadata:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
-          value: "70"
+          value: "60"
 
   envConfig:
     JAVA_TOOL_OPTIONS: >-
