--- a/helm/_global/idpay-merchant.yaml
+++ b/helm/_global/idpay-merchant.yaml
@@ -96,6 +96,8 @@ microservice-chart:
     KAFKA_INITIATIVE_SASL_JAAS_CONFIG: evh-idpay-rule-update-idpay-rule-update-consumer-jaas-config-idpay-01
     KEYCLOAK_ADMIN_SERVER_URL: keycloak-url
     KEYCLOAK_ADMIN_CLIENT_SECRET: keycloak-merchant-op-client-secret
+    PDV_ENCRYPT_API_KEY: pdv-api-key
+    PDV_DECRYPT_API_KEY: pdv-api-key
 
   nodeSelector: {}
 
