--- a/helm/prod/mid/idpay-ranking/values.yaml
+++ b/helm/prod/mid/idpay-ranking/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-ranking
-    tag: v1.3.0
+    tag: v1.3.0@sha256:8ab6743c5e20d3d2cb7ef6b86ebd36b198daf481349e0765a7d2b270c5c3b6aa
     pullPolicy: Always
 
   ingress:
