--- a/helm/prod/ext/idpay-notification-manager/values.yaml
+++ b/helm/prod/ext/idpay-notification-manager/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-notification-manager
-    tag: v1.15.0
+    tag: v1.6.1@sha256:79fb623893255ccac382e2c4d0c893fdf5533eea49bc42c460455653dfe78eaa
     pullPolicy: Always
 
   ingress:
