--- a/helm/prod/mid/idpay-payment-instrument/values.yaml
+++ b/helm/prod/mid/idpay-payment-instrument/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-payment-instrument
-    tag: v1.4.7
+    tag: v1.4.7@sha256:b1dc04bb390748b849fc92be9ee0b18440d01aea6a29ed0f44397ebd682b72b2
     pullPolicy: Always
 
   ingress:
