--- a/helm/prod/top/idpay-merchant/values.yaml
+++ b/helm/prod/top/idpay-merchant/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-merchant
-    tag: v2.4.0
+    tag: v2.4.0@sha256:5fc1819f7dcb97a4e994f6cc9dd1d425de99716a5badb572af16a4321a91a7a4
     pullPolicy: Always
 
   ingress:
