--- a/helm/prod/top/idpay-wallet/values.yaml
+++ b/helm/prod/top/idpay-wallet/values.yaml
@@ -1,7 +1,7 @@
 microservice-chart:
   image:
     repository: ghcr.io/pagopa/idpay-wallet
-    tag: v1.7.0
+    tag: v1.7.0@sha256:a074f288d7df665e7bd59c125113b4689de2a9f7114a717bf5229e89031b5ea9
     pullPolicy: Always
 
   ingress:
