Add canary delivery configuration to idpay-ranking Helm chart

--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -114,3 +114,11 @@ microservice-chart:
       operator: "Equal"
       value: "true"
       effect: "NoSchedule"
+
+  canaryDelivery:
+    create: false
+    ingress:
+      canary:
+        type: header
+        headerName: X-Canary
+        headerValue: canary
