Enable canary delivery in idpay-ranking Helm chart

--- a/helm/_global/idpay-ranking.yaml
+++ b/helm/_global/idpay-ranking.yaml
@@ -116,7 +116,7 @@ microservice-chart:
       effect: "NoSchedule"
 
   canaryDelivery:
-    create: false
+    create: true
     ingress:
       canary:
         type: header
